[package]
name = "smory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.0", features = ["mysql", "runtime-tokio-rustls"] }
dotenv = "0.15"
anyhow = "1.0.66"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.45.0"
shuttle-serenity = "0.45.0"
tracing = "0.1.37"
